# src/common/model/platConvert.go
@@ -28,6 +28,40 @@ func (r *DictAddReq) ToDbReq() *platDb.Dict {
 	}
 }
 
+// ToDictPageRes 字典转为分页对象
+func ToDictPageRes(list []*platDb.Dict) []*DictPageRes {
+	res := make([]*DictPageRes, len(list))
+	for i, r := range list {
+		res[i] = &DictPageRes{
+			DictGetRes: DictGetRes{
+				Id:       r.Id,
+				GroupKey: r.GroupKey,
+				Val:      r.Val,
+				Label:    r.Label,
+				LabelEn:  r.LabelEn,
+				Choose:   r.Choose,
+				Remark:   r.Remark,
+			},
+			Sort: r.Sort,
+			Mark: r.Mark,
+		}
+	}
+	return res
+}
+
+// ToDictGetRes 字典转为查询对象
+func ToDictGetRes(r *platDb.Dict) *DictGetRes {
+	return &DictGetRes{
+		Id:       r.Id,
+		GroupKey: r.GroupKey,
+		Val:      r.Val,
+		Label:    r.Label,
+		LabelEn:  r.LabelEn,
+		Choose:   r.Choose,
+		Remark:   r.Remark,
+	}
+}
+
 // ToDbReq 字典更新对象转字典对象
 func (r *DictEditReq) ToDbReq(d *platDb.Dict) {
 	now := time.Now()
@@ -36,37 +70,6 @@ func (r *DictEditReq) ToDbReq(d *platDb.Dict) {
 	d.Choose = r.Choose
 	d.Remark = r.Remark
 	d.UpdateAt = &now
-}
-
-// ToDictPageRes 字典转为分页对象
-func ToDictPageRes(list []*platDb.Dict) []*DictPageRes {
-	res := make([]*DictPageRes, len(list))
-	for i, r := range list {
-		res[i] = &DictPageRes{
-			Id:       r.Id,
-			GroupKey: r.GroupKey,
-			Label:    r.Label,
-			LabelEn:  r.LabelEn,
-			Choose:   r.Choose,
-			Val:      r.Choose,
-			Sort:     r.Sort,
-			Remark:   r.Remark,
-			Mark:     r.Mark,
-		}
-	}
-	return res
-}
-
-// ToDictGetRes 字典转为查询对象
-func ToDictGetRes(res *platDb.Dict) *DictGetRes {
-	return &DictGetRes{
-		Id:       res.Id,
-		GroupKey: res.GroupKey,
-		Label:    res.Label,
-		LabelEn:  res.LabelEn,
-		Choose:   res.Choose,
-		Remark:   res.Remark,
-	}
 }
 
 // ToDbReq 字典更新对象转字典对象
@@ -85,18 +88,79 @@ func (r *SysConfigEditReq) ToDbReq(d *platDb.SysConfig) {
 }
 
 // ToSysConfigGetRes 系統配置转为查询对象
-func ToSysConfigGetRes(res *platDb.SysConfig) *SysConfigGetRes {
+func ToSysConfigGetRes(r *platDb.SysConfig) *SysConfigGetRes {
 	return &SysConfigGetRes{
-		LoginSwitch:       res.LoginSwitch,
-		LoginNum:          res.LoginNum,
-		LoginFailSwitch:   res.LoginFailSwitch,
-		LoginFailUnit:     res.LoginFailUnit,
-		LoginFailNum:      res.LoginFailNum,
-		LoginFailLockUnit: res.LoginFailLockUnit,
-		LoginFailLockNum:  res.LoginFailLockNum,
-		LoginFailTryNum:   res.LoginFailTryNum,
-		LogoutSwitch:      res.LogoutSwitch,
-		LogoutUnit:        res.LogoutUnit,
-		LogoutNum:         res.LogoutNum,
+		LoginSwitch:       r.LoginSwitch,
+		LoginNum:          r.LoginNum,
+		LoginFailSwitch:   r.LoginFailSwitch,
+		LoginFailUnit:     r.LoginFailUnit,
+		LoginFailNum:      r.LoginFailNum,
+		LoginFailLockUnit: r.LoginFailLockUnit,
+		LoginFailLockNum:  r.LoginFailLockNum,
+		LoginFailTryNum:   r.LoginFailTryNum,
+		LogoutSwitch:      r.LogoutSwitch,
+		LogoutUnit:        r.LogoutUnit,
+		LogoutNum:         r.LogoutNum,
 	}
+}
+
+// ToDbReq 响应码创建对象转字典对象
+func (r *ResponseAddReq) ToDbReq() *platDb.ResponseCode {
+	now := time.Now()
+	return &platDb.ResponseCode{
+		Id:          0,
+		ServiceCode: r.ServiceCode,
+		Type:        r.Type,
+		ZhCn:        r.ZhCn,
+		EnUs:        r.EnUs,
+		Remark:      r.Remark,
+		Common: platDb.Common{
+			Mark:     constant.StatusOpen,
+			Status:   constant.StatusOpen,
+			CreateAt: &now,
+			UpdateAt: &now,
+		},
+	}
+}
+
+// ToResponsePageRes 响应码转为分页对象
+func ToResponsePageRes(list []*platDb.ResponseCode) []*ResponsePageRes {
+	res := make([]*ResponsePageRes, len(list))
+	for i, r := range list {
+		res[i] = &ResponsePageRes{
+			ResponseGetRes: ResponseGetRes{
+				Id:          r.Id,
+				Code:        r.Code,
+				ServiceCode: r.ServiceCode,
+				Type:        r.Type,
+				ZhCn:        r.ZhCn,
+				EnUs:        r.EnUs,
+				Remark:      r.Remark,
+			},
+			Mark: r.Mark,
+		}
+	}
+	return res
+}
+
+// ToResponseGetRes 响应码转为查询对象
+func ToResponseGetRes(r *platDb.ResponseCode) *ResponseGetRes {
+	return &ResponseGetRes{
+		Id:          r.Id,
+		Code:        r.Code,
+		ServiceCode: r.ServiceCode,
+		Type:        r.Type,
+		ZhCn:        r.ZhCn,
+		EnUs:        r.EnUs,
+		Remark:      r.Remark,
+	}
+}
+
+// ToDbReq 响应码更新对象转字典对象
+func (r *ResponseEditReq) ToDbReq(d *platDb.ResponseCode) {
+	now := time.Now()
+	d.ZhCn = r.ZhCn
+	d.EnUs = r.EnUs
+	d.Remark = r.Remark
+	d.UpdateAt = &now
 }
