# src/service/plat/platServer/dict.go
@@ -7,7 +7,6 @@ import (
 	"siteol.com/smart/src/common/model/baseModel"
 	"siteol.com/smart/src/common/mysql/actuator"
 	"siteol.com/smart/src/common/mysql/platDb"
-	"strings"
 )
 
 // ReadDict  读取字典
@@ -54,37 +53,15 @@ func AddDict(traceID string, req *model.DictAddReq) *baseModel.ResBody {
 	if err != nil {
 		log.ErrorTF(traceID, "AddDict Fail . Err Is : %v", err)
 		// 解析数据库错误
-		return checkDictDBErr(err)
+		return dictCheckDBErr(err)
 	}
 	return baseModel.Success(constant.DictAddSS, true)
 }
 
 // PageDict 查询字典分页
 func PageDict(traceID string, req *model.DictPageReq) *baseModel.ResBody {
-	// 初始化Page
-	req.PageReq.PageInit()
-	// 组装Query
-	query := actuator.InitQuery()
-	if req.GroupKey != "" {
-		query.Eq("group_key", req.GroupKey)
-		query.Asc("sort")
-	} else {
-		query.Desc("id")
-	}
-	if req.Label != "" {
-		var label string
-		switch req.Local {
-		case "en":
-			label = "label_en"
-		default:
-			label = "label"
-		}
-		query.Like(label, req.Label)
-	}
-	query.Eq("status", constant.StatusOpen)
-	query.LimitByPage(req.Current, req.PageSize)
 	// 查询分页
-	total, list, err := platDb.DictTable.Page(query)
+	total, list, err := platDb.DictTable.Page(dictPageQuery(req))
 	if err != nil {
 		log.ErrorTF(traceID, "PageDict Fail . Err Is : %v", err)
 		return baseModel.Fail(constant.DictGetNG)
@@ -109,18 +86,13 @@ func EditDict(traceID string, req *model.DictEditReq) *baseModel.ResBody {
 		log.ErrorTF(traceID, "GetDict Fail . Err Is : %v", err)
 		return baseModel.Fail(constant.DictGetNG)
 	}
-	// 字段禁止编辑
-	if dbReq.Mark == constant.StatusLock {
-		log.ErrorTF(traceID, "EditDict %d Fail . Can not Edit", dbReq.Id)
-		return baseModel.Fail(constant.DictMarkNG)
-	}
 	// 对象更新
 	req.ToDbReq(&dbReq)
 	err = platDb.DictTable.UpdateOne(dbReq)
 	if err != nil {
 		log.ErrorTF(traceID, "EditDict %d Fail . Err Is : %v", dbReq.Id, err)
 		// 解析数据库错误
-		return checkDictDBErr(err)
+		return dictCheckDBErr(err)
 	}
 	return baseModel.Success(constant.DictEditSS, true)
 }
@@ -156,7 +128,7 @@ func DelDict(traceID string, req *baseModel.IdReq) *baseModel.ResBody {
 		log.ErrorTF(traceID, "GetDict Fail . Err Is : %v", err)
 		return baseModel.Fail(constant.DictGetNG)
 	}
-	// 字段禁止编辑
+	// 字典禁止刪除
 	if dbReq.Mark == constant.StatusLock {
 		log.ErrorTF(traceID, "EditDel %d Fail . Can not Edit", dbReq.Id)
 		return baseModel.Fail(constant.DictMarkNG)
@@ -166,75 +138,7 @@ func DelDict(traceID string, req *baseModel.IdReq) *baseModel.ResBody {
 	if err != nil {
 		log.ErrorTF(traceID, "DelDict %d Fail . Err Is : %v", dbReq.Id, err)
 		// 解析数据库错误
-		return checkDictDBErr(err)
+		return dictCheckDBErr(err)
 	}
 	return baseModel.Success(constant.DictDelSS, true)
-}
-
-// 数据库查询列表转换选择列表与翻译列表
-func dictListToBro(list []*platDb.Dict, local string) []*baseModel.SortRes {
-	broList := make([]*baseModel.SortRes, 0)
-	for _, dict := range list {
-		// 未启用字典
-		if dict.Status != constant.StatusOpen {
-			continue
-		}
-		// 如果可选择，创建选择数据
-		if dict.Choose == constant.StatusOpen {
-			// 翻译label
-			var label string
-			switch local {
-			case "en":
-				label = dict.LabelEn
-			default:
-				label = dict.Label
-			}
-			broList = append(broList, &baseModel.SortRes{
-				Id:   dict.Id,
-				Name: label,
-				Sort: dict.Sort,
-			})
-		}
-	}
-	return broList
-}
-
-// 数据库查询列表转换选择列表与翻译列表
-func dictListToRead(list []*platDb.Dict, local string) ([]*baseModel.SelectRes, map[string]string) {
-	labelList := make([]*baseModel.SelectRes, 0)
-	valueMap := make(map[string]string, 0)
-	for _, dict := range list {
-		// 翻译label
-		var label string
-		switch local {
-		case "en":
-			label = dict.LabelEn
-		default:
-			label = dict.Label
-		}
-		// 创建Map数据
-		valueMap[dict.Val] = label
-		// 未启用字典（可以翻译，不可以选择）
-		if dict.Status != constant.StatusOpen {
-			continue
-		}
-		// 如果可选择，创建选择数据
-		if dict.Choose == constant.StatusOpen {
-			labelList = append(labelList, &baseModel.SelectRes{Label: label, Value: dict.Val})
-		}
-	}
-	return labelList, valueMap
-}
-
-// 解析数据库错误
-func checkDictDBErr(err error) *baseModel.ResBody {
-	errStr := err.Error()
-	if strings.Contains(errStr, constant.DBDuplicateErr) {
-		if strings.Contains(errStr, "dict_uni") {
-			// 字典分组下字典值唯一
-			return baseModel.Fail(constant.DictUniNG)
-		}
-	}
-	// 默认业务异常
-	return baseModel.ResFail
 }
